--- a/index.html
+++ b/index.html
@@ -43,15 +43,7 @@ form input[type="email"] {
   min-width: 260px;
   font-size: 1rem;
 }
-form button {
-  background: #5c0707;
-  color: white;
-  font-weight: bold;
-  padding: 14px 18px;
-  border-radius: 14px;
-  border: none;
-  cursor: pointer;
-}
+
   /* Center the email form */
 .cta-band form {
   display: flex;
@@ -624,8 +616,36 @@ form button {
   .cta-band .no-spam{
     margin-top:8px; font-size:.85rem; color:rgba(255,255,255,.85); font-style:italic;
   }
-</style>
-</style>
+/* --- TIGHTEN THE GAP ABOVE THE FORM --- */
+/* CK adds ~56px top padding on wider screens; kill it */
+.cta-band .formkit-form[data-uid="8bd26b353a"][min-width~="700"] [data-style="clean"],
+.cta-band .formkit-form[data-uid="8bd26b353a"][min-width~="800"] [data-style="clean"]{
+  padding-top: 0 !important;
+}
+
+/* Reduce the paragraph’s bottom margin just above the form */
+.cta-band p{ 
+  margin-bottom: 6px !important; 
+}
+
+/* Make the fields block sit closer to the text */
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-fields{
+  margin-top: 4px !important;   /* was larger */
+  gap: 6px !important;          /* tighter space between input & button */
+}
+
+/* Kill CK’s default 15px bottom margins on field + button */
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-field,
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-submit{
+  margin: 4px 0 !important;
+  max-width: 400px !important;
+}
+
+/* Optional: slightly tighter band padding overall */
+.cta-band{
+  padding-top: 20px !important;
+  padding-bottom: 18px !important;
+}</style>
 </section>
 </div>
 
