--- a/index.html
+++ b/index.html
@@ -682,15 +682,16 @@ form input[type="email"] {
       <img src="images/ABCUniversity.png" alt="ABC University logo small">
       <div>© <span id="year"></span> ABC University</div>
     </div>
-    <div class="subtle">
-      Instagram • TikTok • 
-      <a href="mailto:abculegacy@gmail.com" style="text-decoration:underline;color:#e5e5e5">Email</a>
-    </div>
+
     <div class="subtle">ABC University is where culture and learning meet.</div>
-    <!-- Instagram handle hyperlinked -->
+
+    <!-- Instagram + Email on same line -->
     <div class="subtle">
       <a href="https://instagram.com/ABCU_legacylearning" target="_blank" style="text-decoration:underline; color:#e5e5e5;">
         @ABCU_legacylearning
+      </a> • 
+      <a href="mailto:abculegacy@gmail.com" style="text-decoration:underline; color:#e5e5e5;">
+        abculegacy@gmail.com
       </a>
     </div>
   </div>
