--- a/index.html
+++ b/index.html
@@ -675,25 +675,49 @@ form input[type="email"] {
 </section>
 </div>
 
+<!-- Subscription CTA -->
+<section class="cta-band">
+  <div class="container">
+    <h3>Join the legacy</h3>
+    <p>Be the first to know when ABC University launches. Early subscribers receive previews, updates, and special offers.</p>
 
+    <!-- ConvertKit embed -->
+    <form action="https://app.kit.com/forms/8578135/subscriptions" class="seva-form formkit-form" method="post" 
+      data-sv-form="8578135" data-uid="8bd26b353a" data-format="inline" data-version="5"
+      data-options="{&quot;settings&quot;:{&quot;after_subscribe&quot;:{&quot;action&quot;:&quot;message&quot;,&quot;success_message&quot;:&quot;🎉 You’re in! Thanks for joining the ABC University family!&quot;}}}">
+      
+      <div data-style="clean">
+        <div data-element="fields" class="seva-fields formkit-fields">
+          <div class="formkit-field">
+            <input class="formkit-input" name="email_address" placeholder="Join the Legacy! - Enter your email" required type="email">
+          </div>
+          <button data-element="submit" class="formkit-submit">
+            <span>Subscribe</span>
+          </button>
+        </div>
+      </div>
+    </form>
+    <div class="no-spam">We respect your inbox — no spam, ever.</div>
+  </div>
+</section>  
   <footer>
-  <div class="container foot">
-    <div style="display:flex;align-items:center;gap:10px">
-      <img src="images/ABCUniversity.png" alt="ABC University logo small">
-      <div>© <span id="year"></span> ABC University</div>
+  <div class="container foot" style="flex-direction:column; text-align:center; gap:6px;">
+    <div>
+      <img src="images/ABCUniversity.png" alt="ABC University logo small" style="height:40px;width:auto;vertical-align:middle;margin-right:6px;">
+      © <span id="year"></span> ABC University
+    </div>
+
+    <!-- IG & Email links centered -->
+    <div class="subtle">
+      <a href="https://instagram.com/ABCU_legacylearning" target="_blank" style="text-decoration:underline; color:#e5e5e5; margin-right:12px;">
+        IG
+      </a> • 
+      <a href="mailto:abculegacy@gmail.com" style="text-decoration:underline; color:#e5e5e5; margin-left:12px;">
+        Email
+      </a>
     </div>
 
     <div class="subtle">ABC University is where culture and learning meet.</div>
-
-    <!-- Instagram + Email on same line -->
-    <div class="subtle">
-      <a href="https://instagram.com/ABCU_legacylearning" target="_blank" style="text-decoration:underline; color:#e5e5e5;">
-        @ABCU_legacylearning
-      </a> • 
-      <a href="mailto:abculegacy@gmail.com" style="text-decoration:underline; color:#e5e5e5;">
-        abculegacy@gmail.com
-      </a>
-    </div>
   </div>
 </footer>
 
