--- a/index.html
+++ b/index.html
@@ -581,24 +581,24 @@ form input[type="email"] {
 
     <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 <form
-  action="https://app.kit.com/forms/8578135/subscriptions"  <!-- or https://app.convertkit.com/... IF your embed uses that -->
+  action="https://app.kit.com/forms/8578135/subscriptions"
   class="seva-form formkit-form"
   method="post"
   data-sv-form="8578135"
   data-uid="8bd26b353a"
   data-format="inline"
   data-version="5"
-  data-options='{
-    "settings": {
-      "after_subscribe": {
-        "action": "message",
-        "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href=\"https://instagram.com/ABCU_legacylearning\" target=\"_blank\" style=\"color:#f2b800; font-weight:bold; text-decoration:underline;\">@ABCU_legacylearning</a>",
-        "redirect_url": ""
-      }
-    },
-    "version": "5"
-  }'
->
+    data-options="{ 
+    &quot;settings&quot;: { 
+      &quot;after_subscribe&quot;: { 
+        &quot;action&quot;: &quot;message&quot;, 
+        &quot;success_message&quot;: &quot;🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href='https://instagram.com/ABCU_legacylearning' target='_blank'>@ABCU_legacylearning</a>&quot;, 
+        &quot;redirect_url&quot;: &quot;&quot; 
+      } 
+    }, 
+    &quot;version&quot;: &quot;5&quot; 
+  }"
+  >
   <div data-style="clean">
     <div data-element="fields" class="seva-fields formkit-fields">
       <div class="formkit-field">
@@ -607,9 +607,7 @@ form input[type="email"] {
                placeholder="Join the Legacy! - Enter your email"
                required type="email">
       </div>
-      <button data-element="submit" class="formkit-submit">
-        <span>Subscribe</span>
-      </button>
+      <button data-element="submit" class="formkit-submit"><span>Subscribe</span></button>
     </div>
   </div>
 </form>
