--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ form input[type="email"] {
 .cta-band input[type="email"],
 .cta-band button {
   width: 100%;
-  max-width: 400px;         /* keeps them aligned nicely */
+  max-width: 640px;         /* keeps them aligned nicely */
 }  
   /* 1) Tighten the vertical space inside the red CTA band */
 .cta-band{
@@ -579,42 +579,35 @@ form input[type="email"] {
     <h3>Join the legacy</h3>
     <p>Be the first to know when ABC University launches. Early subscribers receive previews, updates, and special offers.</p>
 
+    <!-- Load CK once, above the form -->
     <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
-<form
-  action="https://app.kit.com/forms/8578135/subscriptions"
-  class="seva-form formkit-form"
-  method="post"
-  data-sv-form="8578135"
-  data-uid="8bd26b353a"
-  data-format="inline"
-  data-version="5"
-    data-options="{ 
-    &quot;settings&quot;: { 
-      &quot;after_subscribe&quot;: { 
-        &quot;action&quot;: &quot;message&quot;, 
-        &quot;success_message&quot;: &quot;🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href='https://instagram.com/ABCU_legacylearning' target='_blank'>@ABCU_legacylearning</a>&quot;, 
-        &quot;redirect_url&quot;: &quot;&quot; 
-      } 
-    }, 
-    &quot;version&quot;: &quot;5&quot; 
-  }"
-  >
-  <div data-style="clean">
-    <div data-element="fields" class="seva-fields formkit-fields">
-      <div class="formkit-field">
-        <input class="formkit-input" name="email_address"
-               aria-label="Join the Legacy! - Enter your email"
-               placeholder="Join the Legacy! - Enter your email"
-               required type="email">
+
+    <form
+      action="https://app.convertkit.com/forms/8578135/subscriptions"
+      class="seva-form formkit-form"
+      method="post"
+      data-sv-form="8578135"
+      data-uid="8bd26b353a"
+      data-format="inline"
+      data-version="5"
+      data-options="{ &quot;settings&quot;: { &quot;after_subscribe&quot;: { &quot;action&quot;: &quot;message&quot;, &quot;success_message&quot;: &quot;🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href='https://instagram.com/ABCU_legacylearning' target='_blank' style='color:#f2b800; font-weight:bold; text-decoration:underline;'>@ABCU_legacylearning</a>&quot;, &quot;redirect_url&quot;: &quot;&quot; } }, &quot;version&quot;: &quot;5&quot; }"
+    >
+      <div data-style="clean">
+        <div data-element="fields" class="seva-fields formkit-fields">
+          <div class="formkit-field">
+            <input class="formkit-input" name="email_address"
+                   aria-label="Join the Legacy! - Enter your email"
+                   placeholder="Join the Legacy! - Enter your email"
+                   required type="email">
+          </div>
+          <button data-element="submit" class="formkit-submit"><span>Subscribe</span></button>
+        </div>
       </div>
-      <button data-element="submit" class="formkit-submit"><span>Subscribe</span></button>
-    </div>
-  </div>
-</form>
+    </form>
 
     <div class="no-spam">We respect your inbox — no spam, ever.</div>
   </div>
-</section>   
+</section>
  <!-- OVERRIDES for the ConvertKit form spacing/centering -->
 <style>
   /* tighten spacing */
@@ -631,7 +624,7 @@ form input[type="email"] {
   .cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-field,
   .cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-submit{
     flex:0 0 100% !important;
-    max-width:400px !important;
+    max-width:640px !important;
     margin:6px 0 0 0 !important;
   }
 
@@ -699,7 +692,6 @@ form input[type="email"] {
   padding-top: 20px !important;
   padding-bottom: 18px !important;
 }</style>
-</section>
 </div>
 
  
