--- a/index.html
+++ b/index.html
@@ -579,18 +579,27 @@ form input[type="email"] {
     <h3>Join the legacy</h3>
     <p>Be the first to know when ABC University launches. Early subscribers receive previews, updates, and special offers.</p>
 
-    <!-- Load CK once, above the form -->
+    <!-- Load ConvertKit once (keep only ONE of these on the whole page) -->
     <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 
     <form
-      action="https://app.convertkit.com/forms/8578135/subscriptions"
+      action="https://app.kit.com/forms/8578135/subscriptions"
       class="seva-form formkit-form"
       method="post"
       data-sv-form="8578135"
       data-uid="8bd26b353a"
       data-format="inline"
       data-version="5"
-      data-options="{ &quot;settings&quot;: { &quot;after_subscribe&quot;: { &quot;action&quot;: &quot;message&quot;, &quot;success_message&quot;: &quot;🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href='https://instagram.com/ABCU_legacylearning' target='_blank' style='color:#f2b800; font-weight:bold; text-decoration:underline;'>@ABCU_legacylearning</a>&quot;, &quot;redirect_url&quot;: &quot;&quot; } }, &quot;version&quot;: &quot;5&quot; }"
+      data-options='{
+        "settings": {
+          "after_subscribe": {
+            "action": "message",
+            "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href=\"https://instagram.com/ABCU_legacylearning\" target=\"_blank\" style=\"color:#f2b800; font-weight:bold; text-decoration:underline;\">@ABCU_legacylearning</a>",
+            "redirect_url": ""
+          }
+        },
+        "version": "5"
+      }'
     >
       <div data-style="clean">
         <div data-element="fields" class="seva-fields formkit-fields">
@@ -691,6 +700,45 @@ form input[type="email"] {
 .cta-band{
   padding-top: 20px !important;
   padding-bottom: 18px !important;
+/* Make the input wide enough so the full placeholder is visible */
+.cta-band .formkit-form[data-uid="8bd26b353a"] input.formkit-input,
+.cta-band input[type="email"]{
+  width: min(800px, 92vw) !important;
+  max-width: 800px !important;
+}
+
+/* Force the Subscribe button to your green (even if CK injects inline styles) */
+.cta-band .formkit-submit,
+.cta-band .formkit-submit[style]{
+  background: var(--hbcu-green) !important;
+  background-color: var(--hbcu-green) !important;
+  color:#fff !important;
+  border-radius:14px !important;
+  font-weight:800 !important;
+  padding:14px 18px !important;
+  box-shadow: 0 2px 0 rgba(0,0,0,.18) !important;
+  margin-bottom:0 !important;
+}
+.cta-band .formkit-submit:hover{
+  background:#0c4a43 !important;
+  background-color:#0c4a43 !important;
+}
+
+/* Center/stack fields nicely */
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-fields{
+  justify-content:center !important;
+  gap:6px !important;
+  margin:0 auto !important;
+}
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-field,
+.cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-submit{
+  flex:0 0 100% !important;
+  max-width:800px !important; /* match the input width above */
+}
+
+/* Tighter band spacing (optional) */
+.cta-band{ padding-top:20px !important; padding-bottom:18px !important; }
+.cta-band p{ margin-bottom:6px !important; }  
 }</style>
 </div>
 
