--- a/index.html
+++ b/index.html
@@ -617,16 +617,17 @@ form input[type="email"] {
     <div class="no-spam">We respect your inbox — no spam, ever.</div>
   </div>
 </section>
-<!-- OVERRIDES for ConvertKit form -->
+<!-- OVERRIDES for ConvertKit form (compact version) -->
 <style>
-/* Input width — balanced */
+/* Input width — smaller */
 .cta-band .formkit-form[data-uid="8bd26b353a"] input.formkit-input,
 .cta-band input[type="email"] {
-  width: min(420px, 90vw) !important;
-  max-width: 420px !important;
-  padding: 14px 16px !important;
-  border-radius: 16px !important;
-  box-shadow: inset 0 0 0 2px rgba(255,255,255,.85) !important;
+  width: min(320px, 90vw) !important;
+  max-width: 320px !important;
+  padding: 10px 14px !important;
+  border-radius: 12px !important;
+  font-size: 0.95rem !important;
+  box-shadow: inset 0 0 0 2px rgba(255,255,255,.75) !important;
   background: #fff !important;
   color: #111 !important;
 }
@@ -634,41 +635,40 @@ form input[type="email"] {
 /* Subscribe button — match input width */
 .cta-band .formkit-submit,
 .cta-band .formkit-submit[style] {
-  width: min(420px, 90vw) !important;
-  max-width: 420px !important;
+  width: min(320px, 90vw) !important;
+  max-width: 320px !important;
   background: var(--hbcu-green) !important;
-  background-color: var(--hbcu-green) !important;
   color: #fff !important;
-  border-radius: 14px !important;
-  font-weight: 800 !important;
-  padding: 14px 18px !important;
+  border-radius: 12px !important;
+  font-weight: 700 !important;
+  padding: 10px 14px !important;
+  font-size: 0.95rem !important;
   box-shadow: 0 2px 0 rgba(0,0,0,.18) !important;
   margin-bottom: 0 !important;
 }
 .cta-band .formkit-submit:hover {
   background: #0c4a43 !important;
-  background-color: #0c4a43 !important;
 }
 
-/* Center/stack fields nicely */
+/* Center/stack fields */
 .cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-fields {
   justify-content: center !important;
-  gap: 6px !important;   /* tighter gap */
+  gap: 6px !important;
   margin: 0 auto !important;
 }
 .cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-field,
 .cta-band .formkit-form[data-uid="8bd26b353a"] .formkit-submit {
   flex: 0 0 100% !important;
-  max-width: 420px !important; /* match input width */
+  max-width: 320px !important;
 }
 
 /* Tighter band spacing */
 .cta-band {
-  padding-top: 20px !important;
-  padding-bottom: 18px !important;
+  padding-top: 18px !important;
+  padding-bottom: 16px !important;
 }
 .cta-band p {
-  margin-bottom: 6px !important;
+  margin-bottom: 4px !important;
 }
 
 }
