--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ form input[type="email"] {
     <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 
     <form
-      action="https://app.kit.com/forms/8578135/subscriptions"
+     action="https://app.convertkit.com/forms/8578135/subscriptions"
       class="seva-form formkit-form"
       method="post"
       data-sv-form="8578135"
