--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ form input[type="email"] {
         "settings": {
           "after_subscribe": {
             "action": "message",
-            "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram: <a href=\"https://instagram.com/ABCU_legacylearning\" target=\"_blank\" style=\"color:#f2b800; text-decoration:underline; font-weight:700;\">@ABCU_legacylearning</a>",
+            "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram: @abcu_legacylearning",
             "redirect_url": ""
           },
           "powered_by": { "show": false }
