--- a/index.html
+++ b/index.html
@@ -583,26 +583,26 @@ form input[type="email"] {
     <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 
     <!-- Clean ConvertKit form: no inline styles, no extra <style> block inside -->
-    <form
-      action="https://app.kit.com/forms/8578135/subscriptions"
-      class="seva-form formkit-form"
-      method="post"
-      data-sv-form="8578135"
-      data-uid="8bd26b353a"
-      data-format="inline"
-      data-version="5"
-      data-options='{
-        "settings": {
-          "after_subscribe": {
-            "action": "message",
-            "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram: @abcu_legacylearning",
-            "redirect_url": ""
-          },
-          "powered_by": { "show": false }
-        },
-        "version": "5"
-      }'
-    >
+   <form
+  action="https://app.kit.com/forms/8578135/subscriptions"
+  class="seva-form formkit-form"
+  method="post"
+  data-sv-form="8578135"
+  data-uid="8bd26b353a"
+  data-format="inline"
+  data-version="5"
+  data-options='{
+    "settings": {
+      "after_subscribe": {
+        "action": "message",
+        "success_message": "<div style=\"font-size:1.05rem; line-height:1.5; text-align:center; color:#0A3B36; font-weight:600;\">🎉 You’re in! Thanks for joining the ABC University family!</div><a href=\"https://instagram.com/ABCU_legacylearning\" target=\"_blank\" style=\"display:inline-block; margin-top:14px; padding:10px 18px; background:#0A3B36; color:#fff; font-weight:700; border-radius:8px; text-decoration:none;\">Follow us on Instagram</a>",
+        "redirect_url": ""
+      },
+      "powered_by": { "show": false }
+    },
+    "version": "5"
+  }'
+>
       <div data-style="clean">
         <ul class="formkit-alert formkit-alert-error" data-element="errors" data-group="alert"></ul>
         <div data-element="fields" class="seva-fields formkit-fields">
