--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ form input[type="email"] {
           data-uid="8bd26b353a"
           data-format="inline"
           data-version="5"
-          min-width="400 500 600 700 800">
+          min-width="400 500 600 700 800"
         data-options='{
     "settings": {
       "after_subscribe": {
