--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ form input[type="email"] {
     "settings": {
       "after_subscribe": {
         "action": "message",
-        "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here:  <a href='https://instagram.com/abcu_legacylearning' target='_blank'>@abcu_legacylearning</a>",
+        "success_message": "🎉 You’re in! Thanks for joining the ABC University family! Follow us on Instagram here: <a href=\'https://instagram.com/abcu_legacylearning\' target=\'_blank\'>@abcu_legacylearning</a>",
         "redirect_url": ""
       },
       "powered_by": { "show": false }
